# ScSDK

./: CMakeLists.txt  README.md
cmake/: ide.cmake  initialize_project_version.cmake  sdks.cmake  sdks_common.cmake  utilities.cmake
src/ScUtils/: CMakeLists.txt
src/ScUtils/cmake/: scconfig.h.cmake  scutils_config_checks.cmake
src/ScUtils/include/scutils/: scglobal.h
src/ScUtils/include/scutils/buffer/: scarraydata.h  scfreelist.h
src/ScUtils/include/scutils/container/: scbihash.h  sccontainerutils.h
src/ScUtils/include/scutils/memory/: scmalloc.h  scmallocimpl.h
src/ScUtils/include/scutils/text/: scstring.h  scstringdata.h  scstringlist.h
src/ScUtils/include/scutils/thread/: scatomic.h  scdetachabletask.h  screadwritelock.h  scrunnable.h  scthreadpool.h  scthreadpool_p.h
src/ScUtils/include/scutils/utils/: scalgorithm.h  sccompilerdetection.h  scconfig.h  sccppattributes.h  scendian.h  scexplicitlysharedpointer.h  scflags.h  scglobalstatic.h  scmath.h  scnamespace.h  scnumeric.h  scprocessordetection.h  screfcount.h  scsystemdetection.h
src/ScUtils/src/: scglobal.cpp
src/ScUtils/src/buffer/: scarraydata.cpp
src/ScUtils/src/memory/: scmalloc.cpp  scmallocimpl.cpp
src/ScUtils/src/text/: scstring.cpp  scstringdata.cpp  scstringlist.cpp
src/ScUtils/src/thread/: screadwritelock.cpp  scrunnable.cpp  scthreadpool.cpp
src/ScUtils/src/utils/: scendian.cpp
tests/ScUtils/Application-test/: CMakeLists.txt  main.cpp
tests/ScUtils/Json-testes/: CMakeLists.txt  main.cpp
tests/ScUtils/String-tests/: CMakeLists.txt  main.cpp
toolchains/: VersionConfig.h.in  cmake_project_config.cmake  config.cmake.in  pkg-config.pc.in
